--- a/package.json
+++ b/package.json
@@ -87,14 +87,14 @@
     "@stitches/react": "^1.2.8",
     "flexsearch": "^0.7.43",
     "hls.js": "^1.5.3",
-    "node-webvtt": "^1.9.4",
     "openseadragon": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
     "sanitize-html": "^2.11.0",
-    "swiper": "^9.4.1",
-    "uuid": "^9.0.1"
+    "swiper": "^9.0.0",
+    "uuid": "^9.0.1",
+    "vtt.js": "^0.13.0"
   },
   "devDependencies": {
     "@iiif/presentation-3": "^1.1.3",
